# track_viewer

./: README.md  main.py  pyproject.toml
tv/: App.py  ContentFrame.py  EmptyPage.py  KmlTrack.py  ListView.py  SideBar.py  TrackPage.py  TrackPlot.py  VelocityPlot.py  VerticalNavigationToolbar.py  WorkSpace.py
workspace/: 10_сент._2024 г._15_11_42.kml  11_сент._2024 г._17_00_52.kml  14_сент._2024 г._17_25_37.kml  track_20240901_112152_кривая_троллингиста.trk  track_20240901_112152_кривая_троллингиста_2.gpx
