[tool.poetry]
name = "track-viewer"
version = "0.1.0"
description = ""
authors = ["Alex <temper8@gmail.com>"]
readme = "README.md"
packages = [{include = "track_viewer"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
